js/src/tests/test262/built-ins/Promise/reject/ctx-ctor-throws.js
var
CustomPromise
=
function
(
)
{
throw
new
Test262Error
(
)
;
}
;
assert
.
throws
(
Test262Error
function
(
)
{
Promise
.
reject
.
call
(
CustomPromise
)
;
}
)
;
reportCompare
(
0
0
)
;
